# hakoniwa-remote-api

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config_lint.py
config/sample/: remote-api.json
config/sample/endpoint/: client_endpoint.json  server_endpoint.json
config/sample/endpoint/cache/: queue.json
config/sample/endpoint/comm/: tcp_client_inout_comm.json  tcp_server_inout_comm.json
config/sample/rpc/: endpoints.json  rpc.json
config/schema/: remote-api-schema.json
include/hakoniwa/: remote_api.hpp
include/hakoniwa/api/: client_core.hpp  iservice_handler.hpp  loader.hpp  protocol.hpp  server_context.hpp  server_core.hpp
messages/: include_path.txt  ros_msgs.txt  search_path.txt
messages/impl/csharp/hako_srv_msgs/: AckEventRequest.cs  AckEventRequestPacket.cs  AckEventResponse.cs  AckEventResponsePacket.cs  GetEventRequest.cs  GetEventRequestPacket.cs  GetEventResponse.cs  GetEventResponsePacket.cs  GetSimStateRequest.cs  GetSimStateRequestPacket.cs  GetSimStateResponse.cs  GetSimStateResponsePacket.cs  JoinRequest.cs  JoinRequestPacket.cs  JoinResponse.cs  JoinResponsePacket.cs  SimControlRequest.cs  SimControlRequestPacket.cs  SimControlResponse.cs  SimControlResponsePacket.cs
messages/impl/javascript/hako_srv_msgs/: pdu_conv_AckEventRequest.js  pdu_conv_AckEventRequestPacket.js  pdu_conv_AckEventResponse.js  pdu_conv_AckEventResponsePacket.js  pdu_conv_GetEventRequest.js  pdu_conv_GetEventRequestPacket.js  pdu_conv_GetEventResponse.js  pdu_conv_GetEventResponsePacket.js  pdu_conv_GetSimStateRequest.js  pdu_conv_GetSimStateRequestPacket.js  pdu_conv_GetSimStateResponse.js  pdu_conv_GetSimStateResponsePacket.js  pdu_conv_JoinRequest.js  pdu_conv_JoinRequestPacket.js  pdu_conv_JoinResponse.js  pdu_conv_JoinResponsePacket.js  pdu_conv_SimControlRequest.js  pdu_conv_SimControlRequestPacket.js  pdu_conv_SimControlResponse.js  pdu_conv_SimControlResponsePacket.js  pdu_jstype_AckEventRequest.js  pdu_jstype_AckEventRequestPacket.js  pdu_jstype_AckEventResponse.js  pdu_jstype_AckEventResponsePacket.js  pdu_jstype_GetEventRequest.js  pdu_jstype_GetEventRequestPacket.js  pdu_jstype_GetEventResponse.js  pdu_jstype_GetEventResponsePacket.js  pdu_jstype_GetSimStateRequest.js  pdu_jstype_GetSimStateRequestPacket.js  pdu_jstype_GetSimStateResponse.js  pdu_jstype_GetSimStateResponsePacket.js  pdu_jstype_JoinRequest.js  pdu_jstype_JoinRequestPacket.js  pdu_jstype_JoinResponse.js  pdu_jstype_JoinResponsePacket.js  pdu_jstype_SimControlRequest.js  pdu_jstype_SimControlRequestPacket.js  pdu_jstype_SimControlResponse.js  pdu_jstype_SimControlResponsePacket.js
messages/impl/offset/hako_srv_msgs/: AckEventRequest.offset  AckEventRequestPacket.offset  GetSimStateResponse.offset  GetSimStateResponsePacket.offset
messages/impl/python/hako_srv_msgs/: pdu_conv_AckEventRequest.py  pdu_conv_AckEventRequestPacket.py  pdu_conv_AckEventResponse.py  pdu_conv_AckEventResponsePacket.py  pdu_conv_GetEventRequest.py  pdu_conv_GetEventRequestPacket.py  pdu_conv_GetEventResponse.py  pdu_conv_GetEventResponsePacket.py  pdu_conv_GetSimStateRequest.py  pdu_conv_GetSimStateRequestPacket.py  pdu_conv_GetSimStateResponse.py  pdu_conv_GetSimStateResponsePacket.py  pdu_conv_JoinRequest.py  pdu_conv_JoinRequestPacket.py  pdu_conv_JoinResponse.py  pdu_conv_JoinResponsePacket.py  pdu_conv_SimControlRequest.py  pdu_conv_SimControlRequestPacket.py  pdu_conv_SimControlResponse.py  pdu_conv_SimControlResponsePacket.py  pdu_pytype_AckEventRequest.py  pdu_pytype_AckEventRequestPacket.py  pdu_pytype_AckEventResponse.py  pdu_pytype_AckEventResponsePacket.py  pdu_pytype_GetEventRequest.py  pdu_pytype_GetEventRequestPacket.py  pdu_pytype_GetEventResponse.py  pdu_pytype_GetEventResponsePacket.py  pdu_pytype_GetSimStateRequest.py  pdu_pytype_GetSimStateRequestPacket.py  pdu_pytype_GetSimStateResponse.py  pdu_pytype_GetSimStateResponsePacket.py  pdu_pytype_JoinRequest.py  pdu_pytype_JoinRequestPacket.py  pdu_pytype_JoinResponse.py  pdu_pytype_JoinResponsePacket.py  pdu_pytype_SimControlRequest.py  pdu_pytype_SimControlRequestPacket.py  pdu_pytype_SimControlResponse.py  pdu_pytype_SimControlResponsePacket.py
messages/impl/types/hako_srv_msgs/: pdu_cpptype_AckEventRequest.hpp  pdu_cpptype_AckEventRequestPacket.hpp  pdu_cpptype_AckEventResponse.hpp  pdu_cpptype_AckEventResponsePacket.hpp  (+76 more)
messages/service/hako_srv/: AckEvent.srv  GetEvent.srv  GetSimState.srv  Join.srv  SimControl.srv
python/hakoniwa_remote_api/: __init__.py  update_pdusize.py  validate_configs.py
python/hakoniwa_remote_api/schema/: remote-api-schema.json
src/: remote_api.cpp
src/client/: client_core.cpp
src/main/: client.cpp  server.cpp
src/server/: concrete_service_handler.cpp  concrete_service_handler.hpp  server_core.cpp
test/: CMakeLists.txt
tools/: config_lint.py
tools/linter/: __init__.py  base.py  endpoint_linter.py  remote_api_linter.py  rpc_linter.py
(+15 files in other folders)
